--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "recharts": "^3.4.1"
+    "react-markdown": "^10.1.0",
+    "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
