--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "supabase:login": "supabase login",
+    "supabase:link": "supabase link",
+    "supabase:deploy": "supabase functions deploy",
+    "supabase:deploy:agentic": "supabase functions deploy ai-chat-agentic",
+    "supabase:logs": "supabase functions logs ai-chat-agentic --follow",
+    "supabase:serve": "supabase functions serve",
+    "supabase:secrets": "supabase secrets list"
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.10.0",
