fix: use absolute path in .vercelignore to prevent excluding lib/supabase
Changed 'supabase/' to '/supabase/' to only match the root supabase directory.
This prevents Vercel from ignoring lib/supabase/* files which are required
by the application.

The pattern 'supabase/' was matching BOTH:
- ./supabase/ (Edge Functions - should be ignored)
- ./lib/supabase/ (Client/Server utils - MUST be included)

Using '/supabase/' only matches from root, fixing the issue.

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,5 +1,6 @@
-# Ignore Supabase Edge Functions (deployed separately to Supabase)
-supabase/
+# Ignore Supabase Edge Functions directory (deployed separately to Supabase)
+# NOTE: This only ignores ./supabase/, NOT ./lib/supabase/
+/supabase/
 
 # Ignore Supabase local development files
 .supabase/
@@ -7,6 +8,6 @@ supabase/
 # Ignore deployment scripts
 deploy-edge-functions.sh
 
-# Ignore Supabase-specific documentation
-supabase-ai-jobs-schema.sql
+# Ignore Supabase-specific SQL files
+supabase-*.sql
 
